switch to textboxes for mine counter and timer because it's noticably faster (for the timer at least)

--- a/content/minesweeper.css
+++ b/content/minesweeper.css
@@ -20,6 +20,9 @@
   padding: 4px 6px;
   margin-bottom: 8px;
 }
+#mine-counter, #timer {
+  width: 6ex;
+}
 
 /* hex images and column styles for correct alignment */
 #hex-grid > vbox[evencolumn] { margin-top: 8px; }
@@ -57,22 +60,9 @@
 .square-mine  { -moz-image-region: rect(0px 208px 16px 192px); }
 .square-highlighted-mine { -moz-image-region: rect(0px 224px 16px 208px); }
 
-/* mine counter and timer digits */
-.counter-0 { -moz-image-region: rect(32px  13px 55px   0px); }
-.counter-1 { -moz-image-region: rect(32px  26px 55px  13px); }
-.counter-2 { -moz-image-region: rect(32px  39px 55px  26px); }
-.counter-3 { -moz-image-region: rect(32px  52px 55px  39px); }
-.counter-4 { -moz-image-region: rect(32px  65px 55px  52px); }
-.counter-5 { -moz-image-region: rect(32px  78px 55px  65px); }
-.counter-6 { -moz-image-region: rect(32px  91px 55px  78px); }
-.counter-7 { -moz-image-region: rect(32px 104px 55px  91px); }
-.counter-8 { -moz-image-region: rect(32px 117px 55px 104px); }
-.counter-9 { -moz-image-region: rect(32px 130px 55px 117px); }
-.counter-- { -moz-image-region: rect(32px 143px 55px 130px); }
-
 /* new game button */
-.new-game-button-normal { -moz-image-region: rect(55px  26px 81px     0); }
-#new-game-button:active { -moz-image-region: rect(55px  52px 81px  26px); }
-.new-game-button-won    { -moz-image-region: rect(55px  78px 81px  52px); }
-.new-game-button-lost   { -moz-image-region: rect(55px 104px 81px  78px); }
-.new-game-button-oh     { -moz-image-region: rect(55px 160px 81px 104px); }
+.new-game-button-normal { -moz-image-region: rect(32px  26px 58px     0); }
+#new-game-button:active { -moz-image-region: rect(32px  52px 58px  26px); }
+.new-game-button-won    { -moz-image-region: rect(32px  78px 58px  52px); }
+.new-game-button-lost   { -moz-image-region: rect(32px 104px 58px  78px); }
+.new-game-button-oh     { -moz-image-region: rect(32px 160px 58px 104px); }
