Empty log message

--- a/content/minesweeper.css
+++ b/content/minesweeper.css
@@ -49,45 +49,51 @@
 
 .revealed {
   list-style-image: none;
+  font-weight: bold;
+}
+.square.revealed {
   width: 16px;
   height: 16px;
-  font-weight: bold;
+}
+.hex.revealed {
+  width: 18px;
+  height: 16px;
 }
 
 /* colors */
-.square-1, .hex-1 { color: blue; }
-.square-2, .hex-2 { color: #008400; }
-.square-3, .hex-3 { color: red; }
-.square-4, .hex-4 { color: #000084; }
-.square-5, .hex-5 { color: #840000; }
-.square-6, .hex-6 { color: #008484; }
-.square-7, .hex-7 { color: #840084; }
+.t1 { color: blue; }
+.t2 { color: #008400; }
+.t3 { color: red; }
+.t4 { color: #000084; }
+.t5 { color: #840000; }
+.t6 { color: #008484; }
+.t7 { color: #840084; }
 
 /* square images */
-.square-button { -moz-image-region: rect(0px 16px 16px 0); }
-.square-cross  { -moz-image-region: rect(0px 32px 16px 16px); }
-.square-flag-1 { -moz-image-region: rect(0px 48px 16px 32px); }
-.square-flag-2 { -moz-image-region: rect(0px 64px 16px 48px); }
-.square-flag-3 { -moz-image-region: rect(0px 80px 16px 64px); }
-.square-mine-1 { -moz-image-region: rect(0px 96px 16px 80px); }
-.square-mine-2 { -moz-image-region: rect(0px 112px 16px 96px); }
-.square-mine-3 { -moz-image-region: rect(0px 128px 16px 112px); }
-.square-highlighted-mine-1 { -moz-image-region: rect(0px 144px 16px 128px); }
-.square-highlighted-mine-2 { -moz-image-region: rect(0px 160px 16px 144px); }
-.square-highlighted-mine-3 { -moz-image-region: rect(0px 176px 16px 160px); }
+.square.button { -moz-image-region: rect(0 16px 16px 0); }
+.square.cross  { -moz-image-region: rect(0 32px 16px 16px); }
+.square.flag-1 { -moz-image-region: rect(0 48px 16px 32px); }
+.square.flag-2 { -moz-image-region: rect(0 64px 16px 48px); }
+.square.flag-3 { -moz-image-region: rect(0 80px 16px 64px); }
+.square.mine-1 { -moz-image-region: rect(0 96px 16px 80px); }
+.square.mine-2 { -moz-image-region: rect(0 112px 16px 96px); }
+.square.mine-3 { -moz-image-region: rect(0 128px 16px 112px); }
+.square.explosion-1 { -moz-image-region: rect(0 144px 16px 128px); }
+.square.explosion-2 { -moz-image-region: rect(0 160px 16px 144px); }
+.square.explosion-3 { -moz-image-region: rect(0 176px 16px 160px); }
 
 /* hex images */
-.hex-button { -moz-image-region: rect(16px 18px 32px 0); }
-.hex-cross  { -moz-image-region: rect(16px 36px 32px 18px); }
-.hex-flag-1 { -moz-image-region: rect(16px 54px 32px 36px); }
-.hex-flag-2 { -moz-image-region: rect(16px 72px 32px 54px); }
-.hex-flag-3 { -moz-image-region: rect(16px 90px 32px 72px); }
-.hex-mine-1 { -moz-image-region: rect(16px 108px 32px  90px); }
-.hex-mine-2 { -moz-image-region: rect(16px 126px 32px 108px); }
-.hex-mine-3 { -moz-image-region: rect(16px 144px 32px 126px); }
-.hex-highlighted-mine-1 { -moz-image-region: rect(16px 162px 32px 144px); }
-.hex-highlighted-mine-2 { -moz-image-region: rect(16px 180px 32px 162px); }
-.hex-highlighted-mine-3 { -moz-image-region: rect(16px 198px 32px 180px); }
+.hex.button { -moz-image-region: rect(16px 18px 32px 0); }
+.hex.cross  { -moz-image-region: rect(16px 36px 32px 18px); }
+.hex.flag-1 { -moz-image-region: rect(16px 54px 32px 36px); }
+.hex.flag-2 { -moz-image-region: rect(16px 72px 32px 54px); }
+.hex.flag-3 { -moz-image-region: rect(16px 90px 32px 72px); }
+.hex.mine-1 { -moz-image-region: rect(16px 108px 32px  90px); }
+.hex.mine-2 { -moz-image-region: rect(16px 126px 32px 108px); }
+.hex.mine-3 { -moz-image-region: rect(16px 144px 32px 126px); }
+.hex.explosion-1 { -moz-image-region: rect(16px 162px 32px 144px); }
+.hex.explosion-2 { -moz-image-region: rect(16px 180px 32px 162px); }
+.hex.explosion-3 { -moz-image-region: rect(16px 198px 32px 180px); }
 
 
 
