--- a/content/minesweeper.css
+++ b/content/minesweeper.css
@@ -1,20 +1,30 @@
 @import url(chrome://global/skin/);
 
-#minesweeper-window {
-  list-style-image: url(images.png);
-  padding: 0;
-}
+/* 
+colours for buttons:
+ face:            #ebe8d8
+ outer-highlight: #fefefe
+ inner-highlight: #f0eee1
+ inner-shadow:    #aba798
+ outer-shadow:    #716f64
+*/
 
 #main-panel {
-  background: #c6c6c6;
-  border: 2px solid;
-  border-color: white #848484 #848484 white;
   padding: 8px;
+  background: #ebe8d8;
+  border: 2px solid;
+  -moz-border-top-colors: #f0eee1 #fefefe;
+  -moz-border-left-colors: #f0eee1 #fefefe;
+  -moz-border-right-colors: #716f64 #aba798;
+  -moz-border-bottom-colors: #716f64 #aba798;
 }
 #game-panel,
 #top-panel {
   border: 2px solid;
-  border-color: #848484 white white #848484;
+  -moz-border-top-colors: #aba798 #716f64;
+  -moz-border-left-colors: #aba798 #716f64;
+  -moz-border-right-colors: #fefefe #f0eee1;
+  -moz-border-bottom-colors: #fefefe #f0eee1;
 }
 #top-panel {
   padding: 4px 6px;
@@ -28,13 +38,32 @@
 }
 
 
+
 /* new game button */
-.new-game-button-normal { -moz-image-region: rect(32px  26px 58px     0); }
-#new-game-button:active { -moz-image-region: rect(32px  52px 58px  26px); }
-.new-game-button-won    { -moz-image-region: rect(32px  78px 58px  52px); }
-.new-game-button-lost   { -moz-image-region: rect(32px 104px 58px  78px); }
+#new-game-button {
+  list-style-image: url(images.png);
+  background: #ebe8d8;
+  border: 2px solid;
+  -moz-border-top-colors: #fefefe #f0eee1;
+  -moz-border-left-colors: #fefefe #f0eee1;
+  -moz-border-right-colors: #716f64 #aba798;
+  -moz-border-bottom-colors: #716f64 #aba798;
+  padding: 3px;
+}
+#new-game-button:active {
+  -moz-border-top-colors: #716f64 #aba798;
+  -moz-border-left-colors: #716f64 #aba798;
+  -moz-border-right-colors: #fefefe #f0eee1;
+  -moz-border-bottom-colors: #fefefe #f0eee1;
+  padding: 4px 2px 2px 4px;
+}
+.new-game-button-normal { -moz-image-region: rect(42px 17px 59px 0); }
+.new-game-button-won    { -moz-image-region: rect(42px 34px 59px 17px); }
+.new-game-button-lost   { -moz-image-region: rect(42px 51px 59px 34px); }
 
 
+
+/* kill all <button/> styles */
 .tile,
 .tile > .button-box,
 .tile > * > .button-icon,
@@ -47,59 +76,70 @@
   background: transparent;
 }
 
-.revealed {
-  list-style-image: none;
-  font-weight: bold;
-}
-.square.revealed {
-  width: 16px;
-  height: 16px;
-}
-.hex.revealed {
+
+
+/* general tile styles */
+.tile { list-style-image: url(images.png); }
+.button, .revealed { list-style-image: none; }
+
+.cross { -moz-image-region: rect(0 56px 14px 42px); }
+.f1 { -moz-image-region: rect(0 14px 14px 0); }
+.f2 { -moz-image-region: rect(0 28px 14px 14px); }
+.f3 { -moz-image-region: rect(0 42px 14px 28px); }
+.m1 { -moz-image-region: rect(14px 14px 28px 0); }
+.m2 { -moz-image-region: rect(14px 28px 28px 14px); }
+.m3 { -moz-image-region: rect(14px 42px 28px 28px); }
+.e1 { -moz-image-region: rect(28px 14px 42px 0); }
+.e2 { -moz-image-region: rect(28px 28px 42px 14px); }
+.e3 { -moz-image-region: rect(28px 42px 42px 28px); }
+
+/* revealed tiles */
+.revealed { font-weight: bold; }
+.r1 { color: blue; }
+.r2 { color: #008400; }
+.r3 { color: red; }
+.r4 { color: #000084; }
+.r5 { color: #840000; }
+.r6 { color: #008484; }
+.r7 { color: #840084; }
+
+
+
+/* square tile styles */
+.square {
   width: 18px;
-  height: 16px;
+  height: 18px;
+} 
+.square.mine, square.cross, .square.explosion { padding: 2px; }
+
+/* button styling is applied to the .button-box because it does not work#
+   when applied direct to .square.button */
+.square.button > .button-box,
+.square.flag > .button-box {
+  width: 14px;
+  height: 14px;
+  background: #ebe8d8;
+  border: 2px solid;
+  -moz-border-top-colors: #fefefe #f0eee1;
+  -moz-border-left-colors: #fefefe #f0eee1;
+  -moz-border-right-colors: #716f64 #aba798;
+  -moz-border-bottom-colors: #716f64 #aba798;
 }
 
-/* colors */
-.t1 { color: blue; }
-.t2 { color: #008400; }
-.t3 { color: red; }
-.t4 { color: #000084; }
-.t5 { color: #840000; }
-.t6 { color: #008484; }
-.t7 { color: #840084; }
-
-/* square images */
-.square.button { -moz-image-region: rect(0 16px 16px 0); }
-.square.cross  { -moz-image-region: rect(0 32px 16px 16px); }
-.square.flag-1 { -moz-image-region: rect(0 48px 16px 32px); }
-.square.flag-2 { -moz-image-region: rect(0 64px 16px 48px); }
-.square.flag-3 { -moz-image-region: rect(0 80px 16px 64px); }
-.square.mine-1 { -moz-image-region: rect(0 96px 16px 80px); }
-.square.mine-2 { -moz-image-region: rect(0 112px 16px 96px); }
-.square.mine-3 { -moz-image-region: rect(0 128px 16px 112px); }
-.square.explosion-1 { -moz-image-region: rect(0 144px 16px 128px); }
-.square.explosion-2 { -moz-image-region: rect(0 160px 16px 144px); }
-.square.explosion-3 { -moz-image-region: rect(0 176px 16px 160px); }
-
-/* hex images */
-.hex.button { -moz-image-region: rect(16px 18px 32px 0); }
-.hex.cross  { -moz-image-region: rect(16px 36px 32px 18px); }
-.hex.flag-1 { -moz-image-region: rect(16px 54px 32px 36px); }
-.hex.flag-2 { -moz-image-region: rect(16px 72px 32px 54px); }
-.hex.flag-3 { -moz-image-region: rect(16px 90px 32px 72px); }
-.hex.mine-1 { -moz-image-region: rect(16px 108px 32px  90px); }
-.hex.mine-2 { -moz-image-region: rect(16px 126px 32px 108px); }
-.hex.mine-3 { -moz-image-region: rect(16px 144px 32px 126px); }
-.hex.explosion-1 { -moz-image-region: rect(16px 162px 32px 144px); }
-.hex.explosion-2 { -moz-image-region: rect(16px 180px 32px 162px); }
-.hex.explosion-3 { -moz-image-region: rect(16px 198px 32px 180px); }
 
 
+/* hex tile styles */
+.hex {
+  width: 22px;
+  height: 20px;
+  padding: 3px 4px;
+}
+.hex.revealed { padding: 0; }
+.hex.button, .hex.flag { background: url(hex.png); }
 
-/* hex images and column styles for correct alignment */
-#hex-grid > vbox[evencolumn] { margin-top: 8px; }
-#hex-grid > vbox { margin-left: -4px; }
+/* hex column styles for correct alignment */
+#hex-grid > vbox.evencolumn { margin-top: 10px; }
+#hex-grid > vbox { margin-left: -5px; }
 /* force the left-most column back into the #hex-grid box.
    cannot use padding on #hex-grid because it breaks <box>.boxObject.x etc */
 #hex-grid > :first-child { margin-left: 0; }
