stop the tiles resizing when revealed

--- a/content/minesweeper.css
+++ b/content/minesweeper.css
@@ -80,6 +80,11 @@ colours for buttons:
   background: transparent;
 }
 
+.tile {
+  font-size: 14px;
+  overflow: hidden;
+}
+
 
 
 /* general tile styles */
