--- a/src/mines.css
+++ b/src/mines.css
@@ -20,16 +20,6 @@ colours for buttons:
   -moz-border-left-colors: #f0eee1 #aba798;
 }
 
-#msg-pause {
-  background: #ebe8d8;
-  opacity: 0.85;
-  text-align: center;
-  font-size: 25px;
-  color: black;
-  margin: 0;
-  padding: 25px 0 0 0;
-}
-
 #mine-counter-0,
 #mine-counter-1,
 #mine-counter-2,
@@ -38,3 +28,25 @@ colours for buttons:
 }
 
 .faded { opacity: 0.6; }
+
+
+#msg-pause {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  text-shadow: black 0 0 5px;
+  color: white;
+  font-size: 25px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+#msg-pause > div {
+  text-align: center;
+  position: relative;
+  top: 40%;
+}
