--- a/src/mines.css
+++ b/src/mines.css
@@ -1,13 +1,8 @@
 @import url(chrome://global/skin/);
 
-/*
-colours for buttons:
- face:            #ebe8d8
- outer-highlight: #fefefe
- inner-highlight: #f0eee1
- inner-shadow:    #aba798
- outer-shadow:    #716f64
-*/
+iframe {
+  border: 0;
+}
 
 #main-panel {
   background: #ebe8d8;
@@ -17,7 +12,6 @@ colours for buttons:
 #game-panel {
   padding: 2px;
   border-left: 2px solid;
-  -moz-border-left-colors: #f0eee1 #aba798;
 }
 
 #mine-counter-0,
