--- a/src/mines.css
+++ b/src/mines.css
@@ -1,6 +1,5 @@
-@import url(chrome://global/skin/);
-
 @import url(views.css);
+
 
 #wrapper {
   border: 0;
@@ -18,6 +17,12 @@
   width: 100px;
   bottom: 0;
   top: 0;
+}
+
+#status-panel input {
+  display: block;
+  margin: 1em 0;
+  width: 80px;
 }
 
 
