--- a/src/mines.css
+++ b/src/mines.css
@@ -1,3 +1,8 @@
+body {
+  font-family: sans-serif;
+}
+
+
 #wrapper {
   border: 0;
   position: fixed;
@@ -71,6 +76,9 @@
 
 
 
+svg {
+  font-family: serif;
+}
 
 /* Ensure the squares or hexes get the events, not the text on them */
 text {
